[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-upstage>=0.3.0",
    "langgraph>=0.2.0",
    "nest-asyncio>=1.5.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.5.0",
]
